# nicehash-test

./: .gitignore  README.md
Test1/: CMakeLists.txt  README.md
Test1/src/: main.cpp
Test2/: CMakeLists.txt  README.md
Test2-Win10/: README.md  Test2-Win10.sln
Test2-Win10/Test2-Win10/: Passport.cpp  Test2-Win10.cpp  Test2-Win10.vcxproj  Test2-Win10.vcxproj.filters
Test2/src/: main.cpp  passport.cpp
